# fastapi-django-like-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7235dcd2cce6_example_migration_file_alembic.py
api/: urls.py
apps/example/apis/v1/: __init__.py  views.py
apps/example/apis/v2/: __init__.py
apps/example/interfaces/: __init__.py
apps/example/models/: somemodel.py
apps/example/repositories/: __init__.py  somemodel_repo.py
apps/example/services/: core_service.py
apps/example_app/apis/v1/: __init__.py
apps/example_app/tests/: factories.py
config/: db.py  redis.py  settings.py
scripts/: shell.py
src/backend/: .env.example  Makefile  conftest.py  main.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 7235dcd2cce6_example_migration_file_alembic.py
src/backend/api/: urls.py
src/backend/apps/example/: services.py
src/backend/apps/example/models/: __init__.py  somemodel.py
src/backend/apps/example/repositories/: somemodel_repo.py
src/backend/apps/example/schemas/: __init__.py  somemodel_schema.py
src/backend/apps/example/services/: core_service.py
src/backend/apps/example/tests/: factories.py
src/backend/apps/example2/: repository.py
src/backend/apps/hello/: selectors.py  services.py
src/backend/apps/voting/: services.py
src/backend/common/repository/: base.py
src/backend/common/tests/: test_repository.py
src/backend/config/: db.py  settings.py  urls.py
src/backend/scripts/: shell.py
(+15 files in other folders)
